# caretta

./: .gitignore  AGENTS.md  CHARTER.md  CLA.md  Cargo.toml  ISSUES.md  README.md  REVENUE-SHARING.md  STATUS.md  caretta.toml  freq-ai.toml  github-actions-fork-pr-approval.md  install.sh  muxox.toml
.github/: CI.md
.github/workflows/: approve-open-prs.yml  autonomous-sprint.yml  autopilot.yml  ci.yml  cla-assistant.yml  factory-cycle-dispatch.yml  fix-open-prs.yml  monthly-factory-retrospective.yml  nightly-housekeeping.yml  publish-ci-image.yml  release-tag-publisher.yml  release.yml  tracker-loop-dispatch.yml  weekly-backlog-curation.yml  weekly-ci-governance.yml
assets/: README.md
assets/schemas/: conflict_record.json  ideation_result.json  provenance.json  review_result.json  synthesis_result.json
assets/skills/project-context/: SKILL.md
assets/skills/user-personas/personas/: clinical-systems-engineer.json  identity-trust-engineer.json  payments-settlement-engineer.json
assets/workflows/business-development/market-research/: draft.md  finalize.md
assets/workflows/business-development/partnership-outreach/: draft.md  finalize.md
assets/workflows/business-development/sales-prospecting/: draft.md  finalize.md
assets/workflows/deep-research/deep-research/: draft.md  finalize.md
assets/workflows/deep-research/ideation/: draft.md  finalize.md
assets/workflows/deep-research/report-research/: draft.md  finalize.md
assets/workflows/deep-research/retrospective/: finalize.md
assets/workflows/deep-research/roadmapper/: draft.md  finalize.md  workflow.yaml
assets/workflows/deep-research/sprint-planning/: draft.md  finalize.md
assets/workflows/deep-research/strategic-review/: draft.md  finalize.md  workflow.yaml
assets/workflows/default/discovery-framing/: draft.md  finalize.md  workflow.yaml
assets/workflows/default/housekeeping/: draft.md  finalize.md
assets/workflows/default/ideation/: draft.md  finalize.md
assets/workflows/default/report-research/: draft.md  finalize.md
assets/workflows/default/retrospective/: draft.md  finalize.md
assets/workflows/default/roadmapper/: draft.md  finalize.md
assets/workflows/default/sprint-planning/: draft.md  finalize.md
assets/workflows/default/strategic-review/: draft.md  finalize.md  workflow.yaml
assets/workflows/default/visual-regression/: workflow.yaml
assets/workflows/pm/competitive-analysis/: draft.md  finalize.md
assets/workflows/pm/feature-brief/: draft.md  finalize.md
assets/workflows/pm/ideation/: draft.md  finalize.md
assets/workflows/pm/report-research/: draft.md  finalize.md
assets/workflows/pm/retrospective/: draft.md  finalize.md
assets/workflows/pm/roadmapper/: draft.md  finalize.md
assets/workflows/pm/sprint-planning/: draft.md  finalize.md
assets/workflows/pm/stakeholder-update/: draft.md  finalize.md
assets/workflows/pm/strategic-review/: draft.md  finalize.md  workflow.yaml
assets/workflows/quality-assurance/bug-report-triage/: draft.md
assets/workflows/quality-assurance/regression-testing/: draft.md
assets/workflows/quality-assurance/test-plan-generation/: draft.md
assets/workflows/software-factory/autonomous-sprint/: draft.md  finalize.md  workflow.yaml
assets/workflows/software-factory/backlog-curation/: draft.md  finalize.md  workflow.yaml
crates/agent-common/: Cargo.toml
crates/agent-common/src/: lib.rs
crates/agent-runtime/: Cargo.toml  build.rs  build_native_binaries.rs  native-binaries.lock.json  package.json
crates/agent-runtime/src/: available_models.rs  bundled_agents.rs  lib.rs  native_binaries.rs  utilities.rs
crates/claude/: Cargo.toml  capabilities.json
crates/claude/src/: lib.rs  main.rs  wrapper.rs
crates/claude/tests/: live_cli.rs
crates/cli/: Cargo.toml  build.rs
crates/cli-common/: Cargo.toml
crates/cli-common/src/: lib.rs
crates/cli/src/: custom_themes.rs  lib.rs  main.rs
crates/cli/src/agent/: actions.rs  (+38 more)
crates/cli/tests/: cli_integration.rs  template_fixtures.rs
crates/cline/: Cargo.toml  capabilities.json
crates/cline/src/: lib.rs  main.rs  wrapper.rs
crates/cline/tests/: live_cli.rs
crates/codex/: Cargo.toml  capabilities.json
crates/codex/src/: lib.rs  main.rs  wrapper.rs
crates/codex/tests/: live_cli.rs
crates/copilot/: Cargo.toml  capabilities.json
crates/copilot/src/: lib.rs  main.rs  wrapper.rs
crates/copilot/tests/: live_cli.rs
crates/dummy-agent/: Cargo.toml
crates/dummy-agent/examples/: argv_shapes.rs  spawn_dummy.rs
crates/dummy-agent/src/: lib.rs  main.rs  wrapper.rs
crates/dummy-agent/tests/: live_cli.rs
crates/gemini/: Cargo.toml  capabilities.json
crates/gemini/src/: lib.rs  main.rs  wrapper.rs
crates/gemini/tests/: live_cli.rs
crates/grok/: capabilities.json
crates/grok/src/: wrapper.rs
crates/junie/: Cargo.toml  capabilities.json
crates/junie/src/: lib.rs  main.rs  wrapper.rs
crates/junie/tests/: live_cli.rs
crates/xai/: Cargo.toml  capabilities.json
crates/xai/src/: lib.rs  main.rs  wrapper.rs
crates/xai/tests/: live_cli.rs
docs/: configuration.md  discovery-ui-second-pass.md  getting_started.md  privacy.md  workflow.md
docs/diagrams/: tracker-loop-flow.mermaid
my-ci/: workflows.toml
scripts/: agent.sh  check-rs-line-limit.sh  create-github-app.ts  discover-all-agents.ts  dispatch-agent-pr-ci.sh  setup-hooks.sh  smoke-test.sh  stage-crates-io.sh  test-cli-compat.sh  test-examples.sh
(+48 files in other folders)
