# Copyright (c) 2024-2026 Geoff Seemueller
#
# Licensed under the MIT License or Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# See LICENSE-MIT or LICENSE-APACHE for the full license text.
#
# Additionally, this file is subject to the Revenue Sharing Agreement terms
# as defined in REVENUE-SHARING.md for covered organizations.

[package]
name = "cli-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common CLI utilities for caretta"

[dependencies]
agent-common = { path = "../agent-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
toml = "0.8"
url = "2.5"
