# Copyright (c) 2024-2026 Geoff Seemueller
#
# Licensed under the MIT License or Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# See LICENSE-MIT or LICENSE-APACHE for the full license text.
#
# Additionally, this file is subject to the Revenue Sharing Agreement terms
# as defined in REVENUE-SHARING.md for covered organizations.

[package]
name = "caretta-junie"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "junie cli adapter"
repository.workspace = true
homepage.workspace = true

[lib]
name = "junie"

[dependencies]
agent-common = { path = "../agent-common" }
