[package]
name = "caretta-xai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "xai cli adapter"
repository.workspace = true
homepage.workspace = true

[lib]
name = "xai"

[dependencies]
agent-common = { path = "../agent-common" }
cli-common = { path = "../cli-common" }
serde_json = "1"
